exports[`test renders feed skeleton if loading 1`] = `
<Connect(ApollosPullToRefreshWithoutData) handleRefresh={[Function]}>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right mobile={true} background={[undefined]} classes={{...}} ratioClasses={{...}} aspect="square" link={[undefined]}>
<HomeHero item={{...}} />
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true}>
<section className="background--light-secondary soft-half@palm soft@palm-wide-and-up soft-double@anchored">
<div className="grid">
<div className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored">
<FeedItemSkeleton />
</div>
<div className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored">
<FeedItemSkeleton />
</div>
<div className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored">
<FeedItemSkeleton />
</div>
<div className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored">
<FeedItemSkeleton />
</div>
<div className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored">
<FeedItemSkeleton />
</div>
</div>
</section>
</Left>
</Connect(ApollosPullToRefreshWithoutData)>
`;

exports[`test renders with props 1`] = `
<Connect(ApollosPullToRefreshWithoutData) handleRefresh={[Function]}>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right mobile={true} background="http://test.com/1x1.jpg" classes={{...}} ratioClasses={{...}} aspect="square" link="/articles/1">
<HomeHero item={{...}} />
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true}>
<section className="background--light-secondary soft-half@palm soft@palm-wide-and-up soft-double@anchored">
<div className="grid">
<div className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored">
<FeedItem item={{...}} />
</div>
</div>
</section>
</Left>
</Connect(ApollosPullToRefreshWithoutData)>
`;
